--- a/site.html
+++ b/site.html
@@ -2,6 +2,7 @@
 
 <body>
 	<h1>Sitezinho meia boca</h1>
-	<p>conteudo qualquer</p>
+	<p>Conteudo qualquer</p>
+	<p>Site qualquer</p>
 </body>
 </html>
